packages/jsts/tests/dbd/benchmark/TypeError/T01 Cannot read properties of undefined/T01-17/fixed.js
var C = function () {

  this.values = [];

  this.f = function() {
    this.values.forEach(() => {
      42;
    });
  }

  this.g = function() {
    this.values = [];
  }
}

var c = new C();
c.f();

